src/assets/css/richtext.scss
@use 'styles/media';

.richtext {
  img {
    width: 100%;
    height: auto;

    @include media.md {
      width: auto;
      margin-block: 30px;
    }
  }

  p {
    font-size: 16px;
    font-family: 'space-grotesk-light';
    margin-block: 20px;
  }

  h2 {
    font-size: 28px;
    font-weight: 700;
    font-family: 'space-grotesk-bold';
    line-height: 1.3;
    letter-spacing: 0.28px;
  }

  :not(h1, h2, h3, h4, h5, h6) {
    & + h2 {
      margin-top: 80px;
    }

    & + h3 {
      margin-top: 60px;
    }

    & + h4,
    & + h5,
    & + h6 {
      margin-top: 40px;
    }
  }

  h3 {
    font-size: 22px;
    font-weight: 700;
    font-family: 'space-grotesk-bold';
    line-height: 1.4;
    letter-spacing: 0.2px;
    margin-block: 20px;

    :is(ol, ul, img, p, pre, code) + & {
      margin-top: 60px;
    }
  }

  h4,
  h5,
  h6 {
    font-size: inherit;
    font-weight: 700;
    font-family: 'space-grotesk-bold';
    line-height: 1.4;
    letter-spacing: 0.14px;
    margin-block: 20px;

    :is(ol, ul, img, p, pre, code) + & {
      margin-top: 40px;
    }
  }

  a:not(.bookmark):not(.cta-button) {
    font-family: inherit;
    color: inherit;
    font-size: inherit;
    cursor: pointer;
    &:hover {
      color: #8e8e8e;
    }
  }

  ul,
  ol {
    margin-block: 20px;
    padding-inline-start: 2em;

    li & {
      margin-block: 0;
    }
  }

  ul {
    list-style: disc;
  }

  ol {
    list-style: decimal;
  }

  li {
    font-size: 16px;
    font-family: 'space-grotesk-light';
    padding: 5px 0;
  }

  code {
    color: black;
    font-size: 0.9em;
    background-color: #d3d3d3;
    border-radius: 6px;
    padding: 0.2em 0.4em;
    font-family: ui-monospace, 'SFMono-Regular', 'SF Mono', 'Menlo,Consolas',
      'Liberation Mono', monospace;
    white-space: break-spaces;
  }

  pre {
    color: black;
    background-color: #f7f7f7;
    border-radius: 10px;
    font-family: ui-monospace, 'SFMono-Regular', 'SF Mono', 'Menlo,Consolas',
      'Liberation Mono', monospace;
    padding: 1rem 1.5rem;
    margin: 20px auto;
    display: block;

    code {
      background-color: transparent;
      padding: 0;
      border-radius: 0;
      white-space: inherit;
    }
  }

  * + .button-group {
    margin-top: 2rem;
  }
}

